--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "dependencies": {
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^8.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-av": "~8.6.0",
+    "expo-file-system": "~9.2.0",
+    "expo-image-picker": "~9.1.1",
+    "expo-font": "~8.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
